--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ python-dotenv>=1.0.0
 # AI 回覆（擇一或都裝）
 google-genai>=1.0   # Gemini（免費額度適合個人機器人）
 openai>=1.0         # OpenAI（選用）
+
+# 圖片處理
+Pillow>=10.0.0
+httpx>=0.28.0
